# bochka_app_server

./: Dockerfile  Jenkinsfile  Makefile  README.md  alembic.local.ini  docker-compose.yaml  pom.xml  pyproject.toml
alembic/: env.py
alembic/versions/: 26eef447bf8a_user_update.py  aa723ba6e0ff_initial_revision.py
bochka/: main.py
bochka/api/dependencies/: session.py
bochka/api/routers/: auth.py
bochka/api/schemas/: user.py
bochka/orm/: baseclass.py  database.py
bochka/orm/models/: __init__.py  admin.py  amenity_type.py  baseclass.py  booking.py  chat.py  feedback.py  hotel.py  hotel_amenity.py  images.py  payment.py  room_reservation.py  room_type.py  user.py
bochka/service/auth/: create_user_command.py  read_user_query.py
bochka/service/schemas/: user.py
bochka/settings/: auth.py  database.py
bochka/utils/: crypto.py  jwt.py
docker/: Dockerfile  Jenkinsfile  docker-compose.yaml
migration/: env.py
migration/versions/: bc5942289cdb_bochka_app_orm_inital_revision.py
src/main/java/ru/bochka/back/: BackApplication.java
src/main/java/ru/bochka/back/booking/: Booking.java  BookingController.java  BookingDto.java  BookingMapper.java  BookingRepository.java  BookingService.java  BookingServiceImpl.java
src/main/java/ru/bochka/back/city/: City.java  CityController.java  CityRepository.java  CityService.java  CityServiceImpl.java
src/main/java/ru/bochka/back/hotel/: Hotel.java  HotelController.java  HotelDto.java  HotelMapper.java  HotelService.java  (+2 more)
src/main/resources/: application.yaml
src/test/java/ru/bochka/back/: BackApplicationTests.java
(+21 files in other folders)
